# qa-guru-python-17

./: .gitignore  README.md  pyproject.toml
